Fixed layout issues

--- a/src/features/user/ManageProjects/ProjectsContainer.module.scss
+++ b/src/features/user/ManageProjects/ProjectsContainer.module.scss
@@ -21,7 +21,7 @@
   justify-content: space-between;
   border-radius: 10px;
   &:hover{
-    background-color: #f5f5f5;
+    // background-color: #f5f5f5;
   }
   
 }
