--- a/src/features/user/RegisterTrees/RegisterModal.module.scss
+++ b/src/features/user/RegisterTrees/RegisterModal.module.scss
@@ -1,5 +1,8 @@
 @import './../../../theme/theme';
 
+.registerTreesPage{
+  max-width: 420px;
+}
 
 .contribTitle {
   display: flex;
